@@ -100,7 +100,6 @@ import java.util.concurrent.ExecutionException;
 /** Instrumentation tests for {@link RecentTabsPage}. */
 @RunWith(ChromeJUnit4ClassRunner.class)
 @CommandLineFlags.Add({ChromeSwitches.DISABLE_FIRST_RUN_EXPERIENCE})
-@EnableFeatures({ChromeFeatureList.UNO_PHASE_2_FOLLOW_UP})
 @DoNotBatch(reason = "Tests manipulate UI which can interfere between tests.")
 public class RecentTabsPageTest {
     private static final int COLOR_ID = TabGroupColorId.YELLOW;
@@ -557,10 +556,10 @@ public class RecentTabsPageTest {
                 mActivity.getRecentlyClosedEntriesManagerForTesting();
         ThreadUtils.runOnUiThreadBlocking(
                 () -> {
-                    recentlyClosedEntriesManager.onWindowClosed(
-                            window2, /* isPermanentDeletion= */ false);
-                    recentlyClosedEntriesManager.onWindowClosed(
-                            window1, /* isPermanentDeletion= */ false);
+                    recentlyClosedEntriesManager.onWindowsClosed(
+                            Collections.singletonList(window2), /* isPermanentDeletion= */ false);
+                    recentlyClosedEntriesManager.onWindowsClosed(
+                            Collections.singletonList(window1), /* isPermanentDeletion= */ false);
                 });
         assertEquals(2, recentlyClosedEntriesManager.getRecentlyClosedEntries().size());
 
@@ -649,8 +648,15 @@ public class RecentTabsPageTest {
         final RecentlyClosedTab tab =
                 new RecentlyClosedTab(
                         0, 0, "Tab Title", new GURL("https://www.example.com/"), null);
-        setRecentlyClosedEntries(Arrays.asList(tab, window));
-        assertEquals(2, mManager.getRecentlyClosedEntries(2).size());
+        RecentlyClosedEntriesManager recentlyClosedEntriesManager =
+                mActivity.getRecentlyClosedEntriesManagerForTesting();
+        setRecentlyClosedEntries(List.of(tab));
+        ThreadUtils.runOnUiThreadBlocking(
+                () ->
+                        recentlyClosedEntriesManager.onWindowsClosed(
+                                Collections.singletonList(window),
+                                /* isPermanentDeletion= */ false));
+        assertEquals(2, recentlyClosedEntriesManager.getRecentlyClosedEntries().size());
 
         final String windowDescriptionString = "google.com and " + (tabCount - 1) + " other tabs";
         View windowView = waitForView(windowTitle);
@@ -662,8 +668,6 @@ public class RecentTabsPageTest {
         // Confirm the recently closed entries are all gone after "Remove all" is clicked.
         openContextMenuAndInvokeItem(
                 windowView, RecentTabsRowAdapter.RecentlyClosedTabsGroup.ID_REMOVE_ALL);
-        RecentlyClosedEntriesManager recentlyClosedEntriesManager =
-                mActivity.getRecentlyClosedEntriesManagerForTesting();
         assertEquals(0, recentlyClosedEntriesManager.getRecentlyClosedEntries().size());
         waitForViewToDisappear(windowDescriptionString);
     }
